- use xelatex insteal of pdflatex

--- a/capitolul1/vectori.tex
+++ b/capitolul1/vectori.tex
@@ -352,8 +352,7 @@ abstractizează un vector cu 3 componente din $\mathbf{R^3}$ (clasele
 \lstinputlisting[
     caption = Reprezentarea in cod a conceptului de vector,
     label=lst:vec:vec4_class,
-    linerange={1-141}
-    ]{./capitolul1/source_code/vector3.h.src}
+    linerange={1-141}]{./capitolul1/source_code/vector3.h.src}
 
 Variabilele membre care reprezintă componentele vectorului sunt declarate în
 partea publică a clasei. Am ales această opțiune deoarece a implementa
