--- a/setup/style.tex
+++ b/setup/style.tex
@@ -7,6 +7,9 @@
 % ******************************************************************
 
 % *************** Load packages ***************
+\usepackage{polyglossia}
+\setmainlanguage{romanian}
+
 \usepackage{graphicx}
 \usepackage{epsfig}
 \usepackage{amsmath}
@@ -22,21 +25,28 @@
 \usepackage{framed}
 \usepackage{todonotes}
 \usepackage{enumerate}
-%\usepackage{fontspec}
-%\setmonofont[Scale=0.8]{Liberation Mono}
+\usepackage{url}
 \usepackage{inconsolata}
 \usepackage[chapter]{algorithm}
 \usepackage{algorithmic}
 \usepackage[retainorgcmds]{IEEEtrantools}
 \usepackage[at]{easylist}
 
+%
+% Font setup
+\usepackage{unicode-math}
+\usepackage{fontspec}
+\setmathfont{Asana Math}
+\setmonofont{Consolas}
+
+
 % *************** Enable index generation ***************
 \makeindex
 
 % *************** Add reference to page number at which bibliography entry is cited ***************
-%\usepackage{citeref}
-%\renewcommand{\bibitempages}[1]{\newblock {\scriptsize [\mbox{cited at p.\
-% }#1]}}
+\usepackage{citeref}
+\renewcommand{\bibitempages}[1]{\newblock {\scriptsize [\mbox{cited at p.\
+ }#1]}}
 
 % *************** Some colour definitions ***************
 \usepackage{color}
