--- a/capitolul1/transformari_liniare.tex
+++ b/capitolul1/transformari_liniare.tex
@@ -61,7 +61,7 @@ din $\mathit{L_{n}}$.
 Atunci există o transformare pentru care $F(e_{1}) =
 h_{1}, F(e_{2}) = h_{2}, \dots F(e_{n}) = h_{n}$. Dacă scriem
 \begin{equation}
-h_{i} = F(e_{i} = a_{i1}e_{1} + a_{i2}e_{2} + \cdots + a_{in}e_{n},
+h_{i} = F(e_{i}) = a_{i1}e_{1} + a_{i2}e_{2} + \cdots + a_{in}e_{n},
 \end{equation} transformării $F$ i se asociază matricea 
 \begin{equation}
 A = \Vert a_{ik} \Vert.
